--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,20 @@ logging:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} [%X{X-Trace-Id}] - %msg%n"
 
 resilience4j:
+  timeLimiter:
+    instances:
+      externalApiTimeout:
+        timeoutDuration: 5s
+        cancelRunningFuture: true
+  retry:
+    instances:
+      externalApiRetry:
+        maxAttempts: 3
+        waitDuration: 2s
+        retryException:
+          - java.io.IOException
+          - org.springframework.web.client.ResourceAccessException
+          - org.springframework.web.client.HttpServerErrorException
   circuitbreaker:
     instances:
       weatherApiCB:
