--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,12 @@
             <artifactId>resilience4j-spring-boot3</artifactId>
             <version>${resiliency4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 	<build>
