--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>smart-itinerary-planner</name>
 	<description>recomends day-to-day itineraries based on user preferences</description>
+    <packaging>jar</packaging>
 	<url/>
 	<licenses>
 		<license/>
@@ -33,6 +34,7 @@
         <junit-jupiter.version>5.13.4</junit-jupiter.version>
         <aventrix-jnanoid.version>2.0.0</aventrix-jnanoid.version>
         <resiliency4j.version>2.3.0</resiliency4j.version>
+        <spring-ai.version>1.0.3</spring-ai.version>
 	</properties>
 
 	<dependencies>
@@ -145,7 +147,27 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-openai</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-bom</artifactId>
+                <version>${spring-ai.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 	<build>
 		<plugins>
