--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,20 @@ spring:
       pageable:
         default-page-size: 10
         max-page-size: 40
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: sparc.expenses@gmail.com
+    password: ${GMAIL_APP_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+  ai:
+    openai:
+      api-key: ${OPENAI_API_KEY}
 
 resilience4j:
   timeLimiter:
