implement redis cache + publish resource events

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   mongodb:
     image: 'mongo:6.0'
-    container_name: itinerary-planner-mongo
+    container_name: itix-mongo
     restart: unless-stopped
     hostname: 'localhost'
     ports:
@@ -12,6 +12,16 @@ services:
       - 'mongo_data:/data/db'
     environment:
       - "MONGO_INITDB_DATABASE=smart-itinerary-planner"
+  redis:
+    image: 'redis:8.2.2'
+    container_name: itix-redis
+    restart: unless-stopped
+    hostname: 'localhost'
+    ports:
+      - "6379:6379"
+    volumes:
+      - 'redis_data:/data'
 
 volumes:
   mongo_data:
+  redis_data:
