--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -2,6 +2,9 @@ spring:
 #  data:
 #    mongodb:
 #      uri: mongodb://localhost:27017/smart-itinerary-planner
+#  redis:
+#    host: localhost
+#    port: 6379
   devtools:
     restart:
       enabled: true
@@ -14,6 +17,9 @@ itinerary:
 
 logging:
   level:
+    com:
+      codrshi:
+        smart_itinerary_planner: DEBUG
     org:
       springframework:
         security: DEBUG
