--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -5,6 +5,9 @@ management:
 
 logging:
   level:
+    com:
+      codrshi:
+        smart_itinerary_planner: INFO
     org:
       springframework:
         security: INFO
