redis fix, unit tests added

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,6 +14,8 @@ itinerary:
     corePoolSize: 5
     maxPoolSize: 10
     queueCapacity: 50
+    timeLimitScheduler:
+      corePoolSize: 4
 
 logging:
   level:
