--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -10,6 +10,10 @@ spring:
       enabled: true
 
 itinerary:
+  redis:
+    rate-limiting:
+      tokens-per-period: 1
+      period: 5000
   async:
     corePoolSize: 5
     maxPoolSize: 10
