--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -63,6 +63,9 @@ itinerary:
     weather-ttl: 7            # in days
     itinerary-ttl: 7          # in days
     blacklisted-mails-ttl: 1  # in mins
+    rate-limiting:
+      tokens-per-period: 10
+      period: 1000            # in ms
   weatherRankThreshold: 18
   patchLimit: 10
   purge:
