--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -8,6 +8,13 @@ spring:
   devtools:
     restart:
       enabled: true
+  ai:
+    openai:
+      apiKey: notNeededForLocalLLM
+      chat:
+        options:
+          model: ai/llama3.2
+        base-url: http://localhost:12434
 
 itinerary:
   redis:
