--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,10 +1,4 @@
 spring:
-#  data:
-#    mongodb:
-#      uri: mongodb://localhost:27017/smart-itinerary-planner
-#  redis:
-#    host: localhost
-#    port: 6379
   devtools:
     restart:
       enabled: true
@@ -39,5 +33,6 @@ logging:
         web: DEBUG
         boot: DEBUG
         data: DEBUG
+        ai: DEBUG
   pattern:
     console: "%cyan(%d{HH:mm:ss}) %highlight([%thread]) %highlight(%-5level) %green(%logger{36}) %magenta([%X{X-Trace-Id}]) - %msg%n"
