expose logging level as configurable env variable

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -7,7 +7,7 @@ logging:
   level:
     com:
       codrshi:
-        smart_itinerary_planner: INFO
+        smart_itinerary_planner: ${LOGGING_LEVEL:INFO}
     org:
       springframework:
         security: INFO
