permit spring security /error endpoint in Security Filter Chain

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -3,6 +3,9 @@ management:
     env:
       keys-to-sanitize: password, apiKey, secretKey, email
 
+server:
+  forward-headers-strategy: framework
+
 logging:
   level:
     com:
